...

            if (_currentPage < onboardingPages.length - 1)
              Positioned(
                top: 20,
                right: 20,
                child: TextButton(
                  key: const Key('skip_button'),
                  onPressed: () => _pageController.jumpToPage(onboardingPages.length - 1),
                  child: const Text(
                    "Skip",
                    style: TextStyle(color: Colors.grey, fontWeight: FontWeight.bold),
                  ),
                ),
...
